--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,143 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 [Aa]ssets/[Ss]treamingAssets/aa.meta
 [Aa]ssets/[Ss]treamingAssets/aa/*
+Rave & Reload_Data/Managed/Mono.Security.dll
+Rave & Reload_Data/Managed/mscorlib.dll
+Rave & Reload_Data/Managed/netstandard.dll
+Rave & Reload_Data/Managed/System.ComponentModel.Composition.dll
+Rave & Reload_Data/Managed/System.Configuration.dll
+Rave & Reload_Data/Managed/System.Core.dll
+Rave & Reload_Data/Managed/System.Data.DataSetExtensions.dll
+Rave & Reload_Data/Managed/System.Data.dll
+Rave & Reload_Data/Managed/System.dll
+Rave & Reload_Data/Managed/System.Drawing.dll
+Rave & Reload_Data/Managed/System.EnterpriseServices.dll
+Rave & Reload_Data/Managed/System.IO.Compression.dll
+Rave & Reload_Data/Managed/System.IO.Compression.FileSystem.dll
+Rave & Reload_Data/Managed/System.Net.Http.dll
+Rave & Reload_Data/Managed/System.Numerics.dll
+Rave & Reload_Data/Managed/System.Runtime.dll
+Rave & Reload_Data/Managed/System.Runtime.Serialization.dll
+Rave & Reload_Data/Managed/System.Security.dll
+Rave & Reload_Data/Managed/System.ServiceModel.Internals.dll
+Rave & Reload_Data/Managed/System.Transactions.dll
+Rave & Reload_Data/Managed/System.Xml.dll
+Rave & Reload_Data/Managed/System.Xml.Linq.dll
+Rave & Reload_Data/Managed/Unity.AI.Navigation.dll
+Rave & Reload_Data/Managed/Unity.Burst.dll
+Rave & Reload_Data/Managed/Unity.Burst.Unsafe.dll
+Rave & Reload_Data/Managed/Unity.Cinemachine.dll
+Rave & Reload_Data/Managed/Unity.Collections.dll
+Rave & Reload_Data/Managed/Unity.Collections.LowLevel.ILSupport.dll
+Rave & Reload_Data/Managed/Unity.InputSystem.dll
+Rave & Reload_Data/Managed/Unity.InputSystem.ForUI.dll
+Rave & Reload_Data/Managed/Unity.Mathematics.dll
+Rave & Reload_Data/Managed/Unity.Multiplayer.Center.Common.dll
+Rave & Reload_Data/Managed/Unity.Postprocessing.Runtime.dll
+Rave & Reload_Data/Managed/Unity.Rendering.LightTransport.Runtime.dll
+Rave & Reload_Data/Managed/UnityEngine.GIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.GraphicsStateCollectionSerializerModule.dll
+Rave & Reload_Data/Managed/UnityEngine.GridModule.dll
+Rave & Reload_Data/Managed/UnityEngine.HierarchyCoreModule.dll
+Rave & Reload_Data/Managed/UnityEngine.HotReloadModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ImageConversionModule.dll
+Rave & Reload_Data/Managed/UnityEngine.IMGUIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.InputForUIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.InputLegacyModule.dll
+Rave & Reload_Data/Managed/UnityEngine.InputModule.dll
+Rave & Reload_Data/Managed/UnityEngine.JSONSerializeModule.dll
+Rave & Reload_Data/Managed/UnityEngine.LocalizationModule.dll
+Rave & Reload_Data/Managed/UnityEngine.MarshallingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.MultiplayerModule.dll
+Rave & Reload_Data/Managed/UnityEngine.NVIDIAModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ParticleSystemModule.dll
+Rave & Reload_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.Physics2DModule.dll
+Rave & Reload_Data/Managed/UnityEngine.PhysicsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.PropertiesModule.dll
+Rave & Reload_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ShaderVariantAnalyticsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.SharedInternalsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.SpriteMaskModule.dll
+Rave & Reload_Data/Managed/UnityEngine.SpriteShapeModule.dll
+Rave & Reload_Data/Managed/UnityEngine.StreamingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.SubstanceModule.dll
+Rave & Reload_Data/Managed/UnityEngine.SubsystemsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TerrainModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TextCoreFontEngineModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TextCoreTextEngineModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TextRenderingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TilemapModule.dll
+Rave & Reload_Data/Managed/UnityEngine.TLSModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UI.dll
+Rave & Reload_Data/Managed/UnityEngine.UIElementsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UmbraModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityAnalyticsCommonModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityConnectModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityCurlModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+Rave & Reload_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+Rave & Reload_Data/Managed/UnityEngine.VehiclesModule.dll
+Rave & Reload_Data/Managed/UnityEngine.VFXModule.dll
+Rave & Reload_Data/Managed/UnityEngine.VideoModule.dll
+Rave & Reload_Data/Managed/UnityEngine.VirtualTexturingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.VRModule.dll
+Rave & Reload_Data/Managed/UnityEngine.WindModule.dll
+Rave & Reload_Data/Managed/UnityEngine.XRModule.dll
+Rave & Reload_Data/Plugins/x86_64/lib_burst_generated.dll
+Rave & Reload_Data/Managed/UnityEngine.GameCenterModule.dll
+Rave & Reload_Data/Managed/UnityEngine.DSPGraphModule.dll
+Rave & Reload_Data/Managed/UnityEngine.dll
+Rave & Reload_Data/Managed/UnityEngine.DirectorModule.dll
+Rave & Reload_Data/Managed/UnityEngine.CrashReportingModule.dll
+Rave & Reload_Data/Managed/UnityEngine.CoreModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ContentLoadModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ClusterRendererModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ClusterInputModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ClothModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AudioModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AssetBundleModule.dll
+Rave & Reload_Data/Managed/UnityEngine.ARModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AnimationModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AndroidJNIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AMDModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AIModule.dll
+Rave & Reload_Data/Managed/UnityEngine.AccessibilityModule.dll
+Rave & Reload_Data/Managed/Unity.VisualScripting.State.dll
+Rave & Reload_Data/Managed/Unity.VisualScripting.Flow.dll
+Rave & Reload_Data/Managed/Unity.VisualScripting.Core.dll
+Rave & Reload_Data/Managed/Unity.VisualScripting.Antlr3.Runtime.dll
+Rave & Reload_Data/Managed/Unity.Timeline.dll
+Rave & Reload_Data/Managed/Unity.TextMeshPro.dll
+Rave & Reload_Data/Managed/Unity.Splines.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Universal.Shaders.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Universal.Runtime.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Universal.Config.Runtime.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Universal.2D.Runtime.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.GPUDriven.Runtime.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Core.ShaderLibrary.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Core.Runtime.Shared.dll
+Rave & Reload_Data/Managed/Unity.RenderPipelines.Core.Runtime.dll
+Rave & Reload_Data/Managed/Unity.RenderPipeline.Universal.ShaderLibrary.dll
+Rave & Reload/Assets/Resources/PerformanceTestRunSettings.json.meta
+Rave & Reload/Assets/Resources/PerformanceTestRunSettings.json
+Rave & Reload/Assets/Resources/PerformanceTestRunInfo.json.meta
+Rave & Reload/Assets/Resources/PerformanceTestRunInfo.json
+Rave & Reload_Data/sharedassets0.resource
+Rave & Reload_Data/sharedassets0.assets.resS
+Rave & Reload_Data/sharedassets0.assets
+Rave & Reload_Data/ScriptingAssemblies.json
+Rave & Reload_Data/RuntimeInitializeOnLoads.json
+Rave & Reload_Data/Resources/unity_builtin_extra
+Rave & Reload_Data/Resources/unity default resources
+Rave & Reload_Data/resources.assets.resS
+Rave & Reload_Data/resources.assets
